syntax = "proto3";

option csharp_namespace = "GrpcExecute";

package execute;

// The executer service definition.
service ExecuteService {
  rpc StartExecute (StartExecuteRequest) returns (StartExecuteReply);
  rpc GetStatus (GetStatusRequest) returns (GetStatusReply);
  rpc GetOutputLines (GetOutputLinesRequest) returns (GetOutputLinesReply);
  rpc Kill (KillRequest) returns (EmptyReply);
}

// Common
message EmptyReply { }

// Enums
enum Environment {
	dotnetExe = 0;
	javaJar = 1;
}

// StartExecute
message StartExecuteRequest {
	string workDirId = 1;
	string buildId = 2;
	Environment environment = 3;
	string rootFilePath = 4;
}

message StartExecuteReply {
	string executeId = 1;
}

// GetStatus
message GetStatusRequest {
	string executeId = 1;
}

message GetStatusReply {
	bool HasExited = 1;
	int32 ExitCode = 2;
}

// GetOutputLines
message GetOutputLinesRequest {
	string executeId = 1;
	int32 offset = 2;
}

message GetOutputLinesReply {
	repeated string outputLines = 1;
}

// kill
message KillRequest {
	string executeId = 1;
}